# MacStudioCluster-GPT_OSS_120B_To_MLX

./: .gitignore  .gitmodules  .node_config.json  BARE_METAL_SETUP.md  EXO_MODELLE_HINZUFUEGEN.md  EXO_README.md  GPT_OSS_120B_ANLEITUNG.md  INSTALLATION.md  MLX_MODEL_LOADING.md  MLX_MONITOR_README.md  MONITORING.md  PIPELINE_USAGE.md  PUSH_TO_GITHUB.md  RAY_CLUSTER_SETUP.md  README.md  TECH_CONFIG_IT.md  VLAN_SETUP.md  face_tag_hardware.html  face_tag_hardware.md  face_tag_software.html  face_tag_software.md  mlx_monitor.py  mlx_monitor.sh  project_sizing_report.md  pyproject.toml  setup.py
admin/: README.md  admin_server.py  start_admin.sh
docker/: .dockerignore  Dockerfile.management  Dockerfile.worker  INSTALL_DOCKER.md  README.md  docker-compose.yml  entrypoint-management.sh  entrypoint-worker.sh  fix_docker_install.sh  start-node.sh
monitoring/: README.md  import_dashboard.sh  install_monitoring.sh  metrics_collector.py  start_grafana.sh  start_metrics_collector.sh  start_prometheus.sh  stop_monitoring.sh
network/: README.md  __init__.py  remove_vlan.sh  setup_vlan.sh  test_vlan.sh  vlan_config.yaml
pipeline/: README.md  __init__.py  cli.py  clustering.py  config.yaml  embeddings.py  example_usage.py  face_detection.py  face_tag_pipeline.py  llm_service.py  minio_client.py  neo4j_client.py
ray_cluster/: README.md  __init__.py  config.yaml  example_usage.py  ray_embeddings.py  ray_face_detection.py  ray_pipeline.py  start_ray_cluster.sh  stop_ray_cluster.sh
services/: README.md  __init__.py  embedding_service.py  face_detection_service.py  start_services.sh  stop_services.sh
streamlit_app/: README.md  app.py  (+1 more)
(+20 files in other folders)
